--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     <footer>
-
+            <p>Desenvolvido por &reg; Control Master</p>
     </footer>
 </body>
 </html>
