--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </div>
         <div class="Form-login">
             <div class="login-text">
-                <span>Login</span>
+                <span>Entrar</span>
             </div>
             <form class="form-submit" action="">
-                <span>Email</span>
-                <input type="text" placeholder=" usuario@outlook.com" >
+                <span>Usuario</span>
+                <input type="text" placeholder=" usuario" >
                 <span>Senha</span>
                 <input type="password" placeholder="**********">
             
