--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div id="principal">
         <div class="imagem-login">
             <picture>
-                <source media="(max-width: 820px)" srcset="imagens/images-removebg-preview.png">
-                <img src="imagens/images-removebg-preview-GG.png" alt="">
+                <!-- <source media="(max-width: 820px)" srcset="imagens/images-removebg-preview.png"> -->
+                <img src="imagens/logo_png.png" alt="">
             </picture>
         </div>
         <div class="Form-login">
