--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </picture>
         </div>
         <div class="Form-login">
-            <div class="login-text">
+            <!-- <div class="login-text">
                 <span>Entrar</span>
-            </div>
+            </div> -->
             <form class="form-submit" action="">
                 <span>Usuario</span>
                 <input type="text" placeholder=" usuario" >
