--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <span>Senha</span>
                 <input type="password" placeholder="**********">
             
-                <button id="botao" type="submit">Entrar</button>
+                <button id="botao"  type="submit"><a href="www.google.com">Entrar</a></button>
             
 
             </form>
