--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             </div> -->
             <form class="form-submit" action="">
                 <span>Usuario</span>
-                <input type="text" placeholder=" usuario" >
+                <input type="text" required placeholder="usuario" >
                 <span>Senha</span>
-                <input type="password" placeholder="**********">
+                <input type="password"   required placeholder="**********">
             
-                <button id="botao"  type="submit"><a href="www.google.com">Entrar</a></button>
+                <button id="botao"  type="submit">Entrar</button>
             
 
             </form>
