--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span>Entrar</span>
             </div> -->
             <form class="form-submit" action="">
-                <span>Usuario</span>
+                <span>Usuário</span>
                 <input type="text" required placeholder="usuario" >
                 <span>Senha</span>
                 <input type="password"   required placeholder="**********">
