--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <span>Senha</span>
                 <input type="password"   required placeholder="**********">
             
-                <button id="botao"  type="submit">Entrar</button>
+                <button id="botao"  type="submit"><a href="../Oficina/Principal/index.html">Entrar</a></button>
             
 
             </form>
