--- a/Principal/index.html
+++ b/Principal/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <header class="header">
-            <a href="#">LOGO</a>
+            <a href="#">LOGOT</a>
             <nav id="nav">
                 <button aria-label="Abrir Menu" id="btn-mobile" aria-controls="menu" aria-haspopup="true" aria-expanded="false" >Menu
                     <span id="hamburguer"></span>
