--- a/Principal/index.html
+++ b/Principal/index.html
@@ -17,7 +17,7 @@
                 <ul class="menu" role="menu">
                     <li><a href="">HOME</a></li>
                     <li><a href="">ESTOQUE</a></li>
-                    <li><a href="">CADASTRO DE PRODUTOS</a></li>
+                    <li><a href="../Cadastro peças/index.html">CADASTRO DE PRODUTOS</a></li>
                     <li><a href="">CADASTRO DE VEICULOS</a></li>
                     <li><a href="">CADASTRO DE CLIENTES</a></li>
                 </ul>
