--- a/Cadastro peças/index.html
+++ b/Cadastro peças/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon/favicon-16x16.png" type="image/x-icon">
-    <link rel="stylesheet" href="style-cadastro-pecas.css">
+    <link rel="stylesheet" href="./style-cadastro-pecas.css">
     <title>Login</title>
 </head>
 <body>
@@ -29,10 +29,9 @@
                 <span>Marca </span>
                 <input type="text">
                 <span>Linha </span>
-                <input type="text" >
+                <input type="text">
                 <span>Estoque</span>
-                <input type="text" >
-            
+                <input type="text">
                 <button id="botao"  type="submit">Cadastrar</button>
             
 
