--- a/Cadastro peças/index.html
+++ b/Cadastro peças/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="Form">
             <div class="cadastro-text">
-                <span>Cadastro de Peças</span>
+                <span>Cadastro de Peeças</span>
             </div>
             <form class="form-submit" action="">
                 <span>Nome</span>
