--- a/Principal/index.html
+++ b/Principal/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.principal.css">
+    <link rel="stylesheet" href="style-centro.css">
     <title>HOME</title>
 </head>
 <body>
@@ -24,7 +25,32 @@
             </nav>
         </header>
         <body>
-            
+            <div id="container-principal">
+                <div class="container-itens">
+                    <img src="Fotos/ClienteSemFundo.png" alt="">
+                    <span>Cadastro Cliente</span>
+                </div>
+                <div class="container-itens">
+                    <img src="Fotos/Cad_veiculo.png" alt="">
+                    <span>Cadastro Veículo</span>
+                </div>
+                <div class="container-itens">
+                    <img src="Fotos/istockphoto-1282696999-1024x1024.png" alt="">
+                    <span>Cadastro peças</span>
+                </div>
+                <div class="container-itens">
+                    <img src="Fotos/Relat_vendas.png" alt="">
+                    <span>Relatórios de vendas</span>
+                </div>
+                <div class="container-itens">
+                    <img src="Fotos/relat_estoque.png" alt="">
+                    <span>Relatório de estoque</span>
+                </div>
+                <div class="container-itens">
+                    <img src="Fotos/dashboard.png" alt="">
+                    <span>Dashboard</span>
+                </div>
+            </div>
         </body>
         <footer>
             <script src="javascript.js"></script>
