--- a/Principal/index.html
+++ b/Principal/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.principal.css">
     <link rel="stylesheet" href="style-centro.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital@0;1&display=swap" rel="stylesheet">
     <title>HOME</title>
 </head>
 <body>
@@ -27,28 +30,40 @@
         <body>
             <div id="container-principal">
                 <div class="container-itens">
-                    <img src="Fotos/ClienteSemFundo.png" alt="">
-                    <span>Cadastro Cliente</span>
+                    <a href="">
+                        <img src="Fotos/ClienteSemFundo.png" alt="">
+                        <span>Cadastro Cliente</span>
+                    </a>
                 </div>
                 <div class="container-itens">
-                    <img src="Fotos/Cad_veiculo.png" alt="">
-                    <span>Cadastro Veículo</span>
+                    <a href="">
+                        <img src="Fotos/Cad_veiculo.png" alt="">
+                        <span>Cadastro Veículo</span>
+                    </a>
                 </div>
                 <div class="container-itens">
-                    <img src="Fotos/istockphoto-1282696999-1024x1024.png" alt="">
-                    <span>Cadastro peças</span>
+                    <a href="">
+                        <img src="Fotos/istockphoto-1282696999-1024x1024.png" alt="">
+                        <span>Cadastro peças</span>
+                    </a>
                 </div>
                 <div class="container-itens">
-                    <img src="Fotos/Relat_vendas.png" alt="">
-                    <span>Relatórios de vendas</span>
+                    <a href="">
+                        <img src="Fotos/Relat_vendas.png" alt="">
+                        <span>Relatórios de vendas</span>
+                    </a>
                 </div>
                 <div class="container-itens">
-                    <img src="Fotos/relat_estoque.png" alt="">
-                    <span>Relatório de estoque</span>
+                    <a href="">
+                        <img src="Fotos/relat_estoque.png" alt="">
+                        <span>Relatório de estoque</span>
+                    </a>
                 </div>
                 <div class="container-itens">
-                    <img src="Fotos/dashboard.png" alt="">
-                    <span>Dashboard</span>
+                    <a href="">
+                        <img src="Fotos/dashboard.png" alt="">
+                        <span>Dashboard</span>
+                    </a>
                 </div>
             </div>
         </body>
