--- a/Cadastro pecas/index-pecas.html
+++ b/Cadastro pecas/index-pecas.html
@@ -6,11 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="./style-cadastro-pecas.css">
+    <link rel="stylesheet" href="../Principal/style.principal.css">
     <title>Login</title>
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <a href="#"><img id="logo" src="logo/logo.png" alt=""></a>
+        <nav id="nav">
+            <button aria-label="Abrir Menu" id="btn-mobile" aria-controls="menu" aria-haspopup="true" aria-expanded="false" >Menu
+                <span id="hamburguer"></span>
+            </button>
+            <ul class="menu" role="menu">
+                <li><a href="../Principal/index-principal.html">HOME</a></li>
+                <li><a href="">ESTOQUE</a></li>
+                <li><a href="../Cadastro pecas/index-pecas.html">CADASTRO DE PRODUTOS</a></li>
+                <li><a href="">CADASTRO DE VEICULOS</a></li>
+                <li><a href="">CADASTRO DE CLIENTES</a></li>
+            </ul>
+        </nav>
     </header>
     <div id="principal">
         <div class="imagem-login">
