--- a/Principal/index-principal.html
+++ b/Principal/index-principal.html
@@ -19,9 +19,9 @@
                     <span id="hamburguer"></span>
                 </button>
                 <ul class="menu" role="menu">
-                    <li><a href="">HOME</a></li>
+                    <li><a href="../Principal/index-principal.html">HOME</a></li>
                     <li><a href="">ESTOQUE</a></li>
-                    <li><a href="../Cadastro peças/index.html">CADASTRO DE PRODUTOS</a></li>
+                    <li><a href="../Cadastro pecas/index-pecas.html">CADASTRO DE PRODUTOS</a></li>
                     <li><a href="">CADASTRO DE VEICULOS</a></li>
                     <li><a href="">CADASTRO DE CLIENTES</a></li>
                 </ul>
